[package]
name = "release-knock"
version = "0.1.1"
edition = "2021"
authors = ["masayil"]
description = "When new latest version released, notify users by alert provider."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
anyhow = "1.0"
microkv = "0.2"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.3", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29", features = ["rt-multi-thread","time","sync","macros"] }
bytes = "1.4"
tokio-graceful-shutdown = "0.13"
home = "0.5"